# rust-fel-example

./: Cargo.toml  build.sh  ci.sh  index.html  index.js  index.ts  package-lock.json  package.json
.github/workflows/: rust-fel-example.yml
pkg/: README.md  package.json  rust-fel-example.d.ts  rust-fel-example.js  rust-fel-example_bg.d.ts  rust-fel-example_bg.wasm  rust_fel_example.d.ts  rust_fel_example.js  rust_fel_example_bg.d.ts  rust_fel_example_bg.wasm
src/: grand_child.rs  main_child.rs  main_component.rs  main_sibling.rs
